--- a/src/app/components/producto/producto.component.css
+++ b/src/app/components/producto/producto.component.css
@@ -1,3 +1,112 @@
-.margen{
-    margin-top: 100px;
+@import url('https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+.margen {
+   margin-top: 100px;
 }
+
+/* Contenedor de productos */
+.productos {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding: 20px;
+}
+
+/* Estilo individual para cada producto */
+.producto {
+    width: 250px;
+    background: linear-gradient(to bottom, #d6dbf1, #f7f8fd);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    padding: 15px;
+    text-align: center;
+    transition: transform 0.3s ease-in-out;
+}
+
+
+/* Imágenes de productos */
+.producto img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+/* Título del producto */
+.producto h3 {
+    font-size: 1.2rem;
+    color: #333;
+    margin: 10px 0;
+}
+
+/* Precio */
+.producto p {
+    font-size: 1rem;
+    font-weight: bold;
+    color: #ff4500;
+}
+
+/* Si no hay productos */
+.vacio {
+    text-align: center;
+    margin-top: 50px;
+}
+
+.vacio img {
+    width: 250px;
+    opacity: 0.8;
+}
+
+.vacio p {
+    font-size: 1.2rem;
+    font-weight: bold;
+    color: #666;
+}
+
+.especificaciones{
+    background-color: #fdf7f7;
+    border-radius: 20px;
+    
+}
+
+.especificaciones h3{
+    font-family: 'Poppins';
+    padding-top: 15px;
+    text-align: left;
+    padding-left: 15px;
+    color: #332a51;
+    margin: 0;
+}
+
+.especificaciones p{
+    font-family: 'Poppins';
+    font-weight: 400;
+    padding-top: 15px;
+    text-align: left;
+    padding-left: 15px;
+    color: #8991c3;
+    margin: 0;
+}
+
+.productos i{
+    text-align: right;
+    color: #332a51;
+    margin: 0;
+    font-size: 30px;
+}
+
+.producto button{
+    background: none;  /* Elimina el color de fondo */
+    border: none;  /* Opcional: elimina el borde */
+    color: inherit; /* Mantiene el color del texto según el contexto */
+    cursor: pointer; /* Mantiene la apariencia de botón */
+
+}
+.producto button:hover{
+    background: none;  /* Elimina el color de fondo */
+    border: none;  /* Opcional: elimina el borde */
+    color: inherit; /* Mantiene el color del texto según el contexto */
+    cursor: pointer; /* Mantiene la apariencia de botón */
+
+}
+
