--- a/src/app/components/producto/producto.component.html
+++ b/src/app/components/producto/producto.component.html
@@ -1,2 +1,29 @@
+<head>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+</head>
 <app-header></app-header>
 <div class="margen"></div>
+<div class="productos">
+    <div *ngFor="let producto of productos" class="producto">
+        <div class="card-header">
+            <button (click)="agregarAlCarrito(producto)">
+            <i class="fa-regular fa-heart"></i>
+            </button>
+        </div>
+        <img [src]="producto.imagen">
+        <div class="especificaciones">
+            <h3>{{producto.nombre}}</h3>
+            <p>Precio: ${{producto.precio}}</p>
+            <button (click)="agregarAlCarrito(producto)">
+                <i class="fa-solid fa-cart-plus"></i>
+            </button>
+            
+        </div>
+        
+    </div>
+    <div *ngIf="productos.length==0" class="vacio">
+      <img src="assets/compras.jpeg">
+      <p>Proximamente más modelos para ti</p>
+      <p>¡Sé paciente!</p>
+    </div>
+    </div>
